--- a/patient_portal/src/App.css
+++ b/patient_portal/src/App.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 
+
+* {
+  font-family: 'Sora', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 .App {
   text-align: center;
@@ -16,7 +24,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
