--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -1,9 +1,3 @@
-.page_db{
-    background: rgb(34,193,195);
-  background: linear-gradient(135deg, rgba(34,193,195,1) 0%,     rgba(253,187,45,1) 100%);
-  min-height: 100vh;
-}
-.login_img{
-    width: 100%;
-    height: 347px;
+.MuiPopover-paper {
+  top: 50px !important;
 }
