Added User Request Functionality.

--- a/patient_portal/src/components/admin/admin.css
+++ b/patient_portal/src/components/admin/admin.css
@@ -13,3 +13,13 @@
 .hand-pointer {
   cursor: pointer;
 }
+
+.item {
+  padding: 15px 0px !important;
+}
+
+i.icon {
+  float: right;
+  font-size: 20px;
+  cursor: pointer;
+}
