--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -1,3 +1,10 @@
 .MuiPopover-paper {
   top: 50px !important;
 }
+.MuiFormHelperText-root {
+  color: red !important;
+}
+.error{
+  color: red !important;
+  font-size: 14px;
+}
