--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -8,3 +8,7 @@
   color: red !important;
   font-size: 14px;
 }
+.MuiFormControl-marginNormal {
+  margin-top: 0px !important;
+  margin-bottom: 5px !important;
+}
