--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -34,3 +34,33 @@ i.icon {
   font-size: 20px;
   margin-top: 23px;
 }
+.dashboard-table {
+  border-collapse: collapse;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.dashboard-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: center;
+}
+.dashboard-table th,
+.dashboard-table td {
+    padding: 12px 15px;
+}
+.tbwd{
+  width: 100%;
+}
+.showcard-header {
+ margin-bottom: 0;
+  background-color: rgba(0,0,0,.03);
+  border-bottom: 1px solid rgba(0,0,0,.125);
+ 
+}
+.prem-1{
+  padding-top: 1rem;
+  color: blue;
+  font-size: 20px;
+}
