--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -40,6 +40,8 @@ i.icon {
   font-family: sans-serif;
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  
+  
 }
 .dashboard-table thead tr {
   background-color: #009879;
@@ -49,6 +51,10 @@ i.icon {
 .dashboard-table th,
 .dashboard-table td {
     padding: 12px 15px;
+    text-align: center;
+}
+.dashboard-table td {
+  text-align: center;
 }
 .tbwd{
   width: 100%;
