--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -21,6 +21,7 @@ i.icon {
 }
 .top_mt_100{
   margin-top: 80px;
+  padding-left: 20px;
 }
 .MuiFormControl-marginNormal {
   margin-top: 0px !important;
