--- a/patient_portal/src/components/imageslider/slider.css
+++ b/patient_portal/src/components/imageslider/slider.css
@@ -7,7 +7,9 @@
     --heights: 50vh;
     --widths: 100%;
   } */
-  
+  .mt_63{
+    margin-top: 63px;
+  }
   .slider-container {
     height: var(--heights);
     width: var(--widths);
@@ -33,7 +35,7 @@
   .slide-image {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     object-fit: cover;
   }
   
