--- a/patient_portal/src/components/Layout/Footer.css
+++ b/patient_portal/src/components/Layout/Footer.css
@@ -1,6 +1,6 @@
 .main-footer {
     color: white;
-    background-color: #3a3838;
+    background-color: #3f51b5;
     padding-top: 3em;
     position: relative;
     bottom: 0;
