--- a/patient_portal/src/components/common/common_style.css
+++ b/patient_portal/src/components/common/common_style.css
@@ -48,13 +48,15 @@ i.icon {
   font-family: sans-serif;
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  
-  
+
 }
 .dashboard-table thead tr {
   background-color: #009879;
   color: #ffffff;
   text-align: center;
+}
+.pt-35{
+  padding-top: 35px;
 }
 .dashboard-table th,
 .dashboard-table td {
@@ -89,3 +91,4 @@ i.icon {
     padding-left: 0px;
   }
 }
+
